--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QuickShow- Ishan Tripathi</title>
+    <title>QuickShow - Movie Booking Platform(ReallyIshan009)</title>
+
+    <!-- Meta Description -->
+    <meta
+      name="description"
+      content="QuickShow - Your ultimate movie booking platform. Book tickets for the latest movies, select your favorite seats, and enjoy seamless payment experience."
+    />
+
+    <!-- Open Graph Meta Tags for Social Media Sharing -->
+    <meta property="og:title" content="QuickShow - Movie Booking Platform" />
+    <meta
+      property="og:description"
+      content="Your ultimate movie booking platform. Book tickets for the latest movies, select your favorite seats, and enjoy seamless payment experience."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://quickshow-sigma.vercel.app/" />
+    <meta property="og:site_name" content="QuickShow" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="QuickShow - Movie Booking Platform" />
+    <meta
+      name="twitter:description"
+      content="Your ultimate movie booking platform. Book tickets for the latest movies, select your favorite seats, and enjoy seamless payment experience."
+    />
+
+    <!-- Additional Meta Tags -->
+    <meta name="author" content="Ishan Tripathi" />
+    <meta
+      name="keywords"
+      content="movie booking, cinema tickets, movie theater, seat selection, online booking"
+    />
   </head>
   <body>
     <div id="root"></div>
